# sample-app

./: Cargo.toml  openapi.yaml
scripts/: start_jaeger.sh
user_service/: Cargo.toml
user_service/src/: handlers.rs  main.rs  models.rs
user_service/src/client/: mod.rs
user_service/src/client.rs/: mod.rs
user_service/src/commands/: client.rs  mod.rs  start.rs
