[workspace]
members = ["user_service"]

[workspace.dependencies]
anyhow = "1.0"
axum = "0.6"
either = "1.8"
http = "0.2"
opentelemetry = "0.18"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
tracing = { version = "0.1" }
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
