[workspace]
resolver = "2"
members = ["user_service"]

[workspace.dependencies]
anyhow = "1.0"
axum = "0.6"
clap = { version = "4.2", features = ["derive", "env"] }
http = "0.2"
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["trace", "cors"] }
tracing = { version = "0.1" }
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2.3" }
