[package]
name = "user_service"
version = "0.0.0"
edition = "2021"

[lib]
name = "user_service"
path = "src/lib.rs"

[[bin]]
name = "user_service"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
